force-app/main/default/objects/Customer_Follow_Up__c/Customer_Follow_Up__c.object-meta.xml
<CustomObject>
    <label>Customer Follow-Up</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Follow-Ups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>