force-app/main/default/objects/Customer_Follow_Up__c/fields/Communication_Description__c.field-meta.xml
<CustomField>
    <fullName>Communication_Description__c</fullName>
    <label>Communication Description</label>
    <type>TextArea</type>
</CustomField>