force-app/main/default/objects/Customer_Follow_Up__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Follow-Ups</relationshipLabel>
    <relationshipName>Customer_Follow_Ups</relationshipName>
    <type>Lookup</type>
</CustomField>