force-app/main/default/objects/Customer_Follow_Up__c/fields/Follow_Up_Code__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Code__c</fullName>
    <displayFormat>FU-{000000}</displayFormat>
    <label>Follow -Up Code</label>
    <type>AutoNumber</type>
</CustomField>