force-app/main/default/objects/Customer_Follow_Up__c/fields/FollowUp_Reason__c.field-meta.xml
<CustomField>
    <fullName>FollowUp_Reason__c</fullName>
    <label>Follow -Up Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First_ FollowUp</fullName>
                <label>First FollowUp</label>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Site Visit</fullName>
            </value>
            <value>
                <fullName>Need Negotiation</fullName>
            </value>
            <value>
                <fullName>Budget Issue</fullName>
            </value>
            <value>
                <fullName>Ready to Book</fullName>
            </value>
            <value>
                <fullName>Payment FollowUp</fullName>
            </value>
            <value>
                <fullName>Need Time to Decide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>