force-app/main/default/objects/Customer_Follow_Up__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Customer Follow-Ups</relationshipLabel>
    <relationshipName>Customer_Follow_Ups</relationshipName>
    <type>Lookup</type>
</CustomField>