force-app/main/default/objects/Customer_Follow_Up__c/fields/Sub_Unit__c.field-meta.xml
<CustomField>
    <fullName>Sub_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Unit</label>
    <referenceTo>Sub_Unit__c</referenceTo>
    <relationshipLabel>Customer Follow-Ups</relationshipLabel>
    <relationshipName>Customer_Follow_Ups</relationshipName>
    <type>Lookup</type>
</CustomField>