force-app/main/default/objects/Customer_Follow_Up__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <referenceTo>Tower__c</referenceTo>
    <relationshipLabel>Customer Follow-Ups</relationshipLabel>
    <relationshipName>Customer_Follow_Ups</relationshipName>
    <type>Lookup</type>
</CustomField>